--- a/i18n/locales/es-ES.yaml
+++ b/i18n/locales/es-ES.yaml
@@ -1,18 +1,40 @@
 head:
   home:
-    title: 'Afonso de Mori A. Silva - Ingeniero de Software - España'
-    description: 'Perfil personal de Afonso de Mori Ayres da Silva. Desarrollador web back-end enfocado en PHP.'
-    keywords: 'afonso, alfonso, mori, ayres, silva, demori, afonsodemori, afonsosilva89, desarrollador web, php, typescript'
+    title: Afonso de Mori A. Silva - Ingeniero de Software - España
+    description: Perfil personal de Afonso de Mori Ayres da Silva. Desarrollador web back-end enfocado en PHP.
+    keywords: afonso, alfonso, mori, ayres, silva, demori, afonsodemori, afonsosilva89, desarrollador web, php, typescript
   curriculum:
     title: 'Currículo: Afonso de Mori - Ingeniero de Software - España'
-    description: 'Conoce la trayectoria profesional de Afonso de Mori, un programador con más de 16 años de experiencia.'
-    keywords: 'curriculum, currículo, programador, alfonso, afonso, mori, ayres, silva, demori, afonsodemori, afonsosilva89'
+    description: Conoce la trayectoria profesional de Afonso de Mori, un programador con más de 16 años de experiencia.
+    keywords: curriculum, currículo, programador, alfonso, afonso, mori, ayres, silva, demori, afonsodemori, afonsosilva89
   contact:
-    title: '¡Hablemos! - Afonso de Mori'
-    description: 'Ponte en contacto con Afonso de Mori, Ingeniero de Software en España.'
-    keywords: 'afonso, alfonso, mori, ayres, silva, contacto, afonsodemori'
+    title: ¡Hablemos! - Afonso de Mori
+    description: Ponte en contacto con Afonso de Mori, Ingeniero de Software en España.
+    keywords: afonso, alfonso, mori, ayres, silva, contacto, afonsodemori
 
 nav:
-  home: 'Inicio'
-  curriculum: 'Currículo'
-  contact: 'Contacto'
+  home: Inicio
+  curriculum: Currículo
+  contact: Contacto
+
+home:
+  title: Desarrollador de Software
+  bio: Ingeniero de Software con más de 16 años de experiencia en desarrollo back-end. Especializado en PHP, Symfony, MySQL y Doctrine. Tengo conocimientos en DevOps y frontend, y me adapto fácilmente a diferentes entornos y proyectos. Comprometido con el aprendizaje continuo, la innovación y el trabajo en equipo.
+
+contact:
+  form:
+    name: Nombre
+    email: Correo electrónico
+    subject: Asunto
+    message: Mensaje
+    sample:
+      name: Juan Pérez
+      email: juan.perez.ok{'@'}example.com
+      subject: Contacto a través del formulario en afonso.dev
+      message: "Hola. ¿Cómo estás?\n\nEsto está rellenado debido al modo de desarrollo.\n\nLa prueba tendrá éxito si el correo tiene OK, y fallará si tiene KO.\n\nSaludos."
+    submit: Enviar mensaje
+    submitting: Enviando...
+    missing_captcha: Falta el token reCAPTCHA.
+    success: ¡Tu mensaje se envió con éxito!
+    failure: No se pudo enviar. Por favor, inténtalo de nuevo.
+    unexpected: Ocurrió un error. Por favor, inténtalo de nuevo.
