refactor: Use resume instead of curriculum for code and English

--- a/i18n/locales/en-US.yaml
+++ b/i18n/locales/en-US.yaml
@@ -3,10 +3,10 @@ head:
     title: Afonso de Mori A. Silva - Software Engineer - Spain
     description: Afonso de Mori Ayres da Silva's personal profile. Back-end web developer PHP focused.
     keywords: afonso, mori, ayres, silva, demori, afonsodemori, afonsosilva89, web developer, php, typescript
-  curriculum:
+  resume:
     title: 'Resume: Afonso de Mori - Software Engineer - Spain'
     description: Learn about the professional career of Afonso de Mori, a programmer with more than 16 years of experience.
-    keywords: curriculum, resume, programmer, afonso, mori, ayres, silva, demori, afonsodemori, afonsosilva89
+    keywords: resume, programmer, afonso, mori, ayres, silva, demori, afonsodemori, afonsosilva89
   contact:
     title: Let's talk! - Afonso de Mori
     description: Get in touch with Afonso de Mori, Software Engineer in Spain.
@@ -14,7 +14,7 @@ head:
 
 nav:
   home: Home
-  curriculum: Curriculum
+  resume: Resume
   contact: Contact
 
 home:
