--- a/i18n/locales/es-ES.yaml
+++ b/i18n/locales/es-ES.yaml
@@ -21,6 +21,35 @@ home:
   title: Desarrollador de Software
   bio: Ingeniero de Software con más de 16 años de experiencia en desarrollo back-end. Especializado en PHP, Symfony, MySQL y Doctrine. Tengo conocimientos en DevOps y frontend, y me adapto fácilmente a diferentes entornos y proyectos. Comprometido con el aprendizaje continuo, la innovación y el trabajo en equipo.
 
+resume:
+  languages: Idiomas
+  print: Imprimir
+  select_version: Elije una versión
+  first:
+    locale: es
+    label: Versiones en español
+    formats:
+      txt: Texto sin formato
+      google:
+        label: Ver en Google Docs
+      linkedin: Ver perfil en LinkedIn
+  second:
+    locale: en
+    label: English versions
+    formats:
+      txt: Plain text
+      google:
+        label: See in Google Docs
+      linkedin: See LinkedIn profile
+  third:
+    locale: pt
+    label: Versões em português
+    formats:
+      txt: Texto simples
+      google:
+        label: Ver no Google Docs
+      linkedin: Ver perfil no LinkedIn
+
 contact:
   form:
     name: Nombre
