--- a/i18n/locales/pt-BR.yaml
+++ b/i18n/locales/pt-BR.yaml
@@ -1,5 +1,5 @@
 head:
-  home:
+  index:
     title: Afonso de Mori A. Silva - Engenheiro de Software - Espanha
     description: Perfil pessoal de Afonso de Mori Ayres da Silva. Desenvolvedor web back-end focado em PHP.
     keywords: afonso, mori, ayres, silva, demori, afonsodemori, afonsosilva89, desenvolvedor web, php, typescript
@@ -12,12 +12,12 @@ head:
     description: Entre em contato com Afonso de Mori, Engenheiro de Software na Espanha.
     keywords: afonso, mori, ayres, silva, contato, afonsodemori
 
-home:
+index:
   title: Desenvolvedor de Software
   bio: Engenheiro de Software com mais de 16 anos de experiência em desenvolvimento back-end. Especializado em PHP, Symfony, MySQL e Doctrine. Tenho conhecimentos em DevOps e frontend, e me adapto facilmente a diferentes ambientes e projetos. Comprometido com aprendizado contínuo, inovação e trabalho em equipe.
 
 nav:
-  home: Início
+  index: Início
   resume: Currículo
   contact: Contato
 
@@ -71,3 +71,8 @@ contact:
     success: Sua mensagem foi enviada com sucesso!
     failure: Falha ao enviar. Por favor, tente novamente.
     unexpected: Ocorreu um erro. Por favor, tente novamente.
+
+error:
+  error: Erro
+  title: Isso é um erro.
+  details: Isso é tudo o que sabemos.
