--- a/i18n/locales/pt-BR.yaml
+++ b/i18n/locales/pt-BR.yaml
@@ -16,6 +16,11 @@ index:
   title: Desenvolvedor de Software
   bio: Engenheiro de Software com mais de 16 anos de experiência em desenvolvimento back-end. Especializado em PHP, Symfony, MySQL e Doctrine. Tenho conhecimentos em DevOps e frontend, e me adapto facilmente a diferentes ambientes e projetos. Comprometido com aprendizado contínuo, inovação e trabalho em equipe.
 
+theme:
+  label: Tema
+  light: Claro
+  dark: Escuro
+
 nav:
   index: Início
   resume: Currículo
